[gd_scene load_steps=5 format=3 uid="uid://db68743nmxu7l"]

[ext_resource type="Script" path="res://games/chess/chess_field_tile.gd" id="1_e4cpu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1t1gi"]
size = Vector3(1, 0.2, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fukb7"]
resource_local_to_scene = true

[sub_resource type="BoxMesh" id="BoxMesh_244hg"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_fukb7")
size = Vector3(1, 0.2, 1)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_e4cpu")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_1t1gi")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
layers = 524289
mesh = SubResource("BoxMesh_244hg")

[connection signal="input_event" from="Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
